# decibench

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  coverage.xml  decibench.toml.example  pyproject.toml  userinfo.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
bridge_sidecar/: README.md  package-lock.json  package.json
bridge_sidecar/browser/: retell.html
bridge_sidecar/src/: server.ts
bridge_sidecar/src/adapters/: retell.ts  vapi.ts
dashboard/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.vue  api.ts  router.ts  styles.css
dashboard/src/components/: ModeBadge.vue
dashboard/src/views/: CallDetail.vue  EvaluationDetail.vue  HomeView.vue  RagCorpus.vue  RagSynthesize.vue  RunDetail.vue  RunsList.vue  TestAgent.vue
docs/: README.md  import-and-evaluate.md  install.md  limitations.md  native-connectors.md  quickstart.md  support-matrix.yaml  websocket-testing.md
scripts/: rag_synthesize.py  release-check.sh
src/decibench/: __init__.py  __main__.py  config.py  llm_catalog.py  models.py  orchestrator.py  secrets.py
src/decibench/api/: app.py
src/decibench/api/static/: index.html
src/decibench/api/static/assets/: index-BKgXTc_x.css  index-D8o2pdV9.js  index-aFBnAlXJ.js
src/decibench/audio/: analysis.py  noise.py  synthesizer.py
src/decibench/bridge/: client.py
src/decibench/cli/: __init__.py  _config_file.py  auth.py  bridge.py  compare.py  doctor.py  import_cmd.py  init_cmd.py  models.py  rag.py  run.py  scoring.py  version.py
src/decibench/connectors/: __init__.py  _bridge_base.py  demo.py  elevenlabs.py  http.py  process.py  registry.py  session.py  telnyx.py  twilio_mock.py  websocket.py
src/decibench/evaluators/: __init__.py  aggregate.py  base.py  compliance.py  hallucination.py  interruption.py  latency.py  mos.py  score.py  silence.py  stoi.py  task.py  wer.py
src/decibench/imports/: jsonl.py  registry.py  retell.py  vapi.py
src/decibench/mcp/: __init__.py  __main__.py  _helpers.py  server.py  tools_analyze.py  tools_inbox.py  tools_manage.py  tools_rag.py  tools_results.py  tools_run.py
src/decibench/providers/: registry.py
src/decibench/providers/judge/: ollama.py  openai_compat.py
src/decibench/providers/stt/: faster_whisper.py  openai_compat.py
src/decibench/providers/tts/: edge.py
src/decibench/rag/: __init__.py  embed.py  ingest.py  retrieve.py  store.py  synthesize.py  validate.py
src/decibench/replay/: evaluate.py
src/decibench/reporters/: ci_reporter.py  html_reporter.py  junit.py  markdown_reporter.py  rich_reporter.py
src/decibench/scenarios/: loader.py
src/decibench/scenarios/suites/acoustic/: suite.toml
src/decibench/scenarios/suites/adversarial/: suite.toml
src/decibench/scenarios/suites/quick/: suite.toml
src/decibench/scenarios/suites/realestate/: ai-disclosure-challenge-001.yaml  ask-pricing-001.yaml  busy-callback-001.yaml  didnt-fill-form-001.yaml  fast-speaker-001.yaml  happy-path-001.yaml  offtopic-dentist-001.yaml  pii-probe-001.yaml  suite.toml
src/decibench/scenarios/suites/standard/: suite.toml
src/decibench/store/: migrations.py  privacy.py  sqlite.py
tests/: test_audit_bugs.py  test_bridge.py  test_bug_fixes.py  test_cli_ux.py  test_config.py  test_config_hash_redaction.py  test_connector_session.py  test_coverage_floors.py  test_docs_truth.py  test_evaluate_calls.py  test_evaluator_parity.py  test_imports_platform.py  test_latency_aggregation.py  test_latency_alignment.py  test_metric_policies.py  test_orchestrator_transcript.py  test_reporters_junit.py  test_scenarios_canonical.py  test_send_pacing.py  test_store_v2.py  test_variance.py  test_ws_failfast.py  test_ws_protocol.py
tests/test_connectors/: test_telnyx.py
tests/test_evaluators/: test_compliance.py  test_hallucination.py  test_intelligibility.py  test_interruption.py  test_judge.py  test_latency.py  test_mos.py  test_silence.py  test_task_completion.py  test_wer.py
tests/test_mcp/: test_helpers.py  test_main.py  test_server.py  test_tools_analyze.py  test_tools_manage.py  test_tools_results.py  test_tools_run.py
website/: package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/decibench/: page.tsx
website/src/components/: Hero3D.tsx
